fix spacing (#1422)

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-harmonised/ec-component-site-header-harmonised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-site-header-harmonised/ec-component-site-header-harmonised.scss
@@ -191,8 +191,8 @@
     .ecl-site-header-harmonised__container {
       align-items: flex-end;
       flex-direction: row;
-      padding-bottom: $ecl-spacing-xl;
-      padding-top: $ecl-spacing-xl;
+      padding-bottom: $ecl-spacing-l;
+      padding-top: $ecl-spacing-l;
     }
 
     .ecl-site-header-harmonised__action {
